Logical initial sync doesn't drop record store when source collection is dropped mid- collection copy

XMLWordPrintableJSON

    • Type: Bug
    • Resolution: Fixed
    • Priority: Major - P3
    • 8.1.0-rc0
    • Affects Version/s: None
    • Component/s: None
    • Replication
    • Fully Compatible
    • ALL
    • Repl 2024-08-05, Repl 2024-08-19
    • 152
    • None
    • None
    • None
    • None
    • None
    • None
    • None

      In logical initial sync, during collection copy if the source collection is dropped the destination's CollectionBulkLoader aborts index builds and drops all indexes, including the _id index. However, it doesn't seem to drop the actual collection - the record store - that contains the documents. The test initial_sync_drop_collection.js demonstrates this.

      Unfortunately when we move to oplog application, we still attempt to perform document updates / deletes to the collection if we see such oplog entries. It's not clear what the effect of not having an _id index is - do we end up resorting to a collection scan to perform each update / delete?

      See comments for more info.

            Assignee:
            Matthew Russotto (Inactive)
            Reporter:
            Vishnu Kaushik
            Votes:
            0 Vote for this issue
            Watchers:
            12 Start watching this issue

              Created:
              Updated:
              Resolved: