SERVER-90674 Make logical initial sync drop record store when source … (#25269)

GitOrigin-RevId: 339c9be7a8fbf1f48a1cc3afdfc89b5573985d6e